feat: auth checks and optimize methods